@@ -1,4 +1,4 @@
-/* Generated by re2c 0.13.5 on Sun Mar  7 14:12:01 2010 */
+/* Generated by re2c 0.13.5 on Fri Mar 26 12:12:03 2010 */
 #line 1 "ext/date/lib/parse_iso_intervals.re"
 /*
    +----------------------------------------------------------------------+
@@ -183,7 +183,7 @@ static long timelib_parse_tz_cor(char **ptr)
 	char *begin = *ptr, *end;
 	long  tmp;
 
-	while (**ptr != '\0') {
+	while (isdigit(**ptr) || **ptr == ':') {
 		++*ptr;
 	}
 	end = *ptr;
